[tool.poetry]
name = "bf-jlab"
version = "0.1.0"
description = ""
authors = ["Bryant Finney <bryant.finney@alumni.uah.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
neovim = "*"
jedi = "*"
black = "*"
jupyterlab = "*"
pandas = "*"
matplotlib = "*"
jupyterlab-git = "*"
isort = "*"
jupyterlab-vim = "*"
jupyterlab-spellchecker = "*"
jupytext = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
